[project]
name = "markdown-agent"
version = "0.1.0"
description = "Intelligenter Agent zur Verwaltung von Markdown-Dateien mit KI-Unterstützung"
authors = [
    {name = "Maximilian Sparenberg", email = "mspbgx@sparenberg.one"}
]
dependencies = [
    "strands>=0.1.0",
    "boto3>=1.34.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 79
target-version = ['py310']

[tool.flake8]
max-line-length = 79
extend-ignore = ["E203", "W503"]